tests/jsx_namespaced_name/jsx_namespaced_name.exp
Error ---------------------------------------------------------------------------------------------------- test.js:10:12

Cannot resolve name `doesNotExist`. [cannot-resolve-name]

   10| <a:b prop={doesNotExist} />; // Error, doesNotExist does not exist
                  ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:12:19

Cannot get `{...}.y` because property `y` is missing in object literal [1]. [prop-missing]

   test.js:12:19
   12| <a:b prop={{x: 3}.y} />; // Error, y does not exist on the object
                         ^

References:
   test.js:12:12
   12| <a:b prop={{x: 3}.y} />; // Error, y does not exist on the object
                  ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:14:12

Cannot use operator `*` with operands string [1] and number [2] [unsafe-arithmetic]

   test.js:14:12
   14| <a:b prop={'string' * 3} />; // Error, can't multiply string by number
                  ^^^^^^^^^^^^

References:
   test.js:14:12
   14| <a:b prop={'string' * 3} />; // Error, can't multiply string by number
                  ^^^^^^^^ [1]
   test.js:14:23
   14| <a:b prop={'string' * 3} />; // Error, can't multiply string by number
                             ^ [2]



Found 3 errors
